# ActionGame

./: .gitignore  CMakeLists.txt  main.cpp
App/: App.cpp  App.h
Character/Camera/: MainCamera.cpp  MainCamera.h
Character/DeadEffect/: EnemyDeadEffect.cpp  EnemyDeadEffect.h
Character/Enemy/: EnemyRat.cpp  EnemyRat.h
Character/Enemy/Golem/: Golem.cpp  Golem.h
Character/Enemy/Mage/: Mage.cpp  Mage.h
Character/Enemy/Skeleton/: Skeleton.cpp  Skeleton.h
Character/HitEffect/: HitEffect.cpp  HitEffect.h
Character/Light/: Light.cpp  Light.h
Character/Menu/SafeArea/: SafeArea.h
Character/Player/: Player.cpp  Player.h
Character/Projectile/: MagicArrow.cpp  MagicArrow.h
Character/Result/: GameClear.cpp  GameClear.h  GameOver.cpp  GameOver.h  GameResult.cpp  GameResult.h
Character/Stage/: Stage.cpp  Stage.h
Character/UI/Button/: UIButton.cpp  UIButton.h
Character/UI/GameOverMenu/: GameOverMenu.cpp  GameOverMenu.h
Character/UI/HPGauge/: HPGauge.cpp  HPGauge.h
Character/UI/ResultMenu/: ResultMenu.cpp  ResultMenu.h
Character/UI/SafeArea/: SafeArea.cpp
Character/UI/ScreenFader/: ScreenFader.cpp  ScreenFader.h
Character/UI/TitleMenu/: TitleMenu.cpp  TitleMenu.h
Component/Audio/: AudioEventPlayer.cpp  AudioEventPlayer.h  BGMController.cpp  BGMController.h
Component/Battle/Area/: BattleArea.cpp  BattleArea.h  LastBattleArea.cpp  LastBattleArea.h
Component/Battle/Wave/: Wave.cpp  Wave.h
Component/Camera/: CameraController.cpp  CameraController.h  CameraObstacleDetection.cpp  CameraObstacleDetection.h  CameraRotator.cpp  CameraRotator.h
Component/Common/: AttackColliderController.cpp  AttackColliderController.h  Damageable.cpp  Damageable.h  DelayedAudioPlayer.cpp  DelayedAudioPlayer.h  EffectSpawner.cpp  EffectSpawner.h  ElapsedDestroyObject.cpp  ElapsedDestroyObject.h  ElapsedTimer.cpp  ElapsedTimer.h  GaugeController.cpp  GaugeController.h  Rotator.cpp  Rotator.h
Component/Effect/: DelayedEffectPlayer.H  DelayedEffectPlayer.cpp
Component/Enemy/: CharacterSearcher.cpp  CharacterSearcher.h
Component/Enemy/State/: EnemyAttackState.cpp  EnemyAttackState.h  EnemyChaseState.cpp  EnemyChaseState.h  EnemyDamageState.cpp  EnemyDamageState.h  EnemyDeadState.cpp  EnemyDeadState.h  EnemyProjectileAttackState.cpp  EnemyProjectileAttackState.h  EnemySearchState.cpp  EnemySearchState.h  EnemySelectorState.cpp  EnemySelectorState.h
Component/Event/: ClearSceneNavigator.cpp  ClearSceneNavigator.h  GameResultController.cpp  GameResultController.h  GameResultEventer.cpp  GameResultEventer.h  PlayerDeadObserver.cpp  PlayerDeadObserver.h
Component/Fade/: AudioFader.cpp  AudioFader.h  UIFader.cpp  UIFader.h
Component/Menu/: ExitButton.cpp  ExitButton.h  MenuButton.cpp  MenuButton.h  MenuController.cpp  MenuController.h  MenuItem.h  SceneChangeButton.cpp  SceneChangeButton.h
Component/Player/: HitStop.cpp  HitStop.h  PlayerAttackState.cpp  PlayerAttackState.h  PlayerDamageState.cpp  PlayerDamageState.h  PlayerDeadState.cpp  PlayerDeadState.h  PlayerInput.cpp  PlayerInput.h  PlayerMoveState.cpp  PlayerMoveState.h  PlayerRollingState.cpp  PlayerRollingState.h
Component/Player/State/: PlayerAttackState.cpp  PlayerAttackState.h  PlayerDamageState.cpp  PlayerDamageState.h  PlayerDeadState.cpp  PlayerDeadState.h  PlayerIdleState.cpp  PlayerIdleState.h  PlayerMoveState.cpp  PlayerMoveState.h  PlayerRollingState.cpp  PlayerRollingState.h
Component/Projectile/: Projectile.cpp  Projectile.h
Component/Scene/: SceneChanger.cpp  SceneChanger.h
Component/StateMachine/: AnimationInfo.h  State.cpp  State.h  StateBehavior.cpp  StateBehavior.h
Constant/: ButtonName.h  CameraConstant.h  GameObjectName.h  ObjectTag.h  SceneName.h
Enum/: AnimationID.h  AudioGroupID.h  AudioID.h  CollisionLayer.h  EffectID.h  MeshID.h  MessageID.h  TextureID.h  TimeScale.h
Enum/State/: EnemyState.h  PlayerState.h
Generator/: BattleAreaGenerator.cpp  BattleAreaGenerator.h
Input/: Input.cpp  Input.h
Scene/: PlayScene.cpp  PlayScene.h  ResultScene.cpp  ResultScene.h  TitleScene.cpp  TitleScene.h
Utility/: AssetLoader.cpp  AssetLoader.h  CameraUtility.cpp  CameraUtility.h  Enum.h  Fuzzy.cpp  Fuzzy.h  ReceptionTimer.cpp  ReceptionTimer.h  RigidbodyUility.cpp  RigidbodyUility.h  StateMachine.h  ValidityTimer.cpp  ValidityTimer.h
cmake/: MakeFilter.cmake
